--- a/provider/src/main/resources/application.properties
+++ b/provider/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8088
+
 #spring\u9879\u76EE\u540D
 spring.application.name=dubbo_auto_configuration_provider_demo
 #Dubbo provider configuration
